--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,41 @@
+# Java
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Gradle
 .gradle/
 bin/
 build/
 SCRIPT/
+
+# VS Code
+.vscode/
 pong.code-workspace
+*settings.json
+*.prettierrc
+
+# IntelliJ IDEA
+.idea/
