--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.hprof
 
 # Gradle
 .gradle/
@@ -32,7 +33,6 @@ SCRIPT/
 
 # VS Code
 .vscode/
-pong.code-workspace
 *settings.json
 *.prettierrc
 
