--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
 java {
@@ -29,6 +32,10 @@ java {
 javafx {
     version = "17"
     modules = [ 'javafx.controls' , 'javafx.fxml' ]
+}
+
+test {
+    useJUnitPlatform()
 }
 
 mainClassName = 'gui.Main'
