Upgrade ball physics and add random start
Ball physics upgraded on a vector class. Added a delay after the ball
passes one of the rackets. Added a random start. Added "effect" when
hitting the ball with a non-idle state of the racket.

--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,13 @@
 *.war
 *.nar
 *.ear
-*.zip
 *.tar
 *.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.hprof
 
 # Gradle
 .gradle/
@@ -33,7 +33,6 @@ SCRIPT/
 
 # VS Code
 .vscode/
-pong.code-workspace
 *settings.json
 *.prettierrc
 
